Quote layer completed

--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 
     <div class="quote-layer">
 
-        <div class="quote-container">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis sit nemo rerum, tempore magnam
-            consequuntur dolore consequatur molestias mollitia delectus? Veritatis ipsum illo eum sit!</div>
+        <div class="quote-container"><em>"Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis sit nemo rerum, tempore magnam
+            consequuntur dolore consequatur molestias mollitia delectus? Veritatis ipsum illo eum sit!"</em>
+        <p><b>- Every, default text ever</b></p></div>
 
 
     </div>
